Removed way of getting script into notifications by not having it inner html for now.Fixed issue where long notifications would break the design

--- a/f1_info_frontend/src/core/navigation/profile-header/desktop-profile-header/desktop-profile-header.component.scss
+++ b/f1_info_frontend/src/core/navigation/profile-header/desktop-profile-header/desktop-profile-header.component.scss
@@ -88,6 +88,7 @@
     display: flex;
     gap: 1rem;
     align-items: center;
+    word-break: break-word;
     padding: 1rem;
 
     fa-icon {
