--- a/f1_info_frontend/src/core/navigation/profile-header/mobile-profile-header/mobile-profile-header.component.scss
+++ b/f1_info_frontend/src/core/navigation/profile-header/mobile-profile-header/mobile-profile-header.component.scss
@@ -136,6 +136,7 @@
 
   &__entry {
     display: flex;
+    word-break: break-word;
     gap: 1rem;
     align-items: center;
     padding: 1rem;
